--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,8 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(Regeditpp VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.10.0)
 
-include(CTest)
-enable_testing()
-
-add_library(Regeditpp Regeditpp.cpp)
+project(RegeditPP VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
+find_package(GTest CONFIG REQUIRED)
+add_executable(main test.cpp) #This is the testing executable
+target_link_libraries(main PRIVATE GTest::gtest GTest::gtest_main) #Link it to the google test library
